test/acceptance/parsing/failing/include-infinite-loop.spun
include "./include-infinite-loop2"
